Bug 580096 - 'move the cycle collector off the main thread'. r=peterv+jst