content/xbl/src/nsBindingManager.cpp
@@ -404,8 +404,7 @@ DocumentInfoHashtableTraverser(nsIURI* key,
   nsCycleCollectionTraversalCallback *cb = 
     static_cast<nsCycleCollectionTraversalCallback*>(userArg);
   NS_CYCLE_COLLECTION_NOTE_EDGE_NAME(*cb, "mDocumentTable value");
-  nsCOMPtr<nsISupports> iface = do_QueryObject(di);
-  cb->NoteXPCOMChild(iface);
+  cb->NoteXPCOMChild(static_cast<nsIScriptGlobalObjectOwner*>(di));
   return PL_DHASH_NEXT;
 }
 
