js/src/xpconnect/src/nsXPConnect.cpp
@@ -456,15 +456,15 @@ nsresult
 nsXPConnect::BeginCycleCollection(nsCycleCollectionTraversalCallback &cb,
                                   bool explainLiveExpectedGarbage)
 {
-    NS_ASSERTION(!mCycleCollectionContext, "Didn't call FinishCollection?");
+    NS_ASSERTION(!mCycleCollectionContext, "Didn't call FinishTraverse?");
     mCycleCollectionContext = new XPCCallContext(NATIVE_CALLER);
     if (!mCycleCollectionContext->IsValid()) {
         mCycleCollectionContext = nsnull;
-        return PR_FALSE;
+        return NS_ERROR_FAILURE;
     }
 
 #ifdef DEBUG_CC
-    NS_ASSERTION(!mJSRoots.ops, "Didn't call FinishCollection?");
+    NS_ASSERTION(!mJSRoots.ops, "Didn't call FinishCycleCollection?");
 
     if(explainLiveExpectedGarbage)
     {
@@ -495,11 +495,16 @@ nsXPConnect::BeginCycleCollection(nsCycleCollectionTraversalCallback &cb,
 }
 
 nsresult 
-nsXPConnect::FinishCycleCollection()
+nsXPConnect::FinishTraverse()
 {
     if (mCycleCollectionContext)
         mCycleCollectionContext = nsnull;
+    return NS_OK;
+}
 
+nsresult 
+nsXPConnect::FinishCycleCollection()
+{
 #ifdef DEBUG_CC
     if(mJSRoots.ops)
     {
